# Examen_Problemas_de_Codificacion

./: CMakeLists.txt  README.md  main.cpp
Cálculo de promedio de calificaciones/: promedio_calificaciones.cpp  promedio_calificaciones.h
Dia de la semana/: dia_semana.cpp  dia_semana.h
Promocion de tienda/: promocion_tienda.cpp  promocion_tienda.h
Tipo de numero/: tipo_numero.cpp  tipo_numero.h
